2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Added a check to any events pending to
	  prevent any GUI freezing while serializing.
	* DocumentTagTable.cs: Minor changes.

2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Added a padding between empty elements.
	* DocumentTagTable.cs: Added almost all the tags that represents
	  elements and attributes used by monodoc.

2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Minor changes to get the name of
	  the document when one assert fails.
	* DocumentBufferArchiver.cs: Added an ad-hoc try-catch block to get
	  missing elements while deserializing.

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui.mdp, DocumentTab.cs: Added DocumentTab that
	  represents a "Tab" ie a ScrolledWindow with an associated
	  DocumentEditor.
	* DocumentEditor.cs: Added a helper method to initialize several
	  properties for the DocumentEditor.

2007-06-25  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentTagTable.cs: Adding more tag for missing elements and
	  attributes.
	* DocumentBuffer.cs: Use Instance call so only one DocumentTagTable is
	  created at any time.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentTagTable.cs, DocumentTag.cs: Deleted HasText property.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Changed Serialize to use the new attribute
	  IsText and the new associated tags to serialize the buffer.
	* DocumentTagTable.cs: Adding *:Text tags that represents patches of
	  text inside a element.
	* DocumentTag.cs: Added a enum that functions as a bit mask, new
	  properties are: IsSerializable, IsElement, IsAttribute and IsText.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Abstracting the several
	  Deserialize*Attributes moethods.
